--- a/spacemacs.d/user-config.org
+++ b/spacemacs.d/user-config.org
@@ -89,7 +89,7 @@ In all text modes except yaml.
 ** Olivetti
   #+begin_src emacs-lisp
     (defun ik-olivetti-mode ()
-      (unless (member major-mode '(yaml-mode toml-mode))
+      (unless (member major-mode '(yaml-mode toml-mode csv-mode))
         (olivetti-mode 1)))
     (add-hook 'text-mode-hook 'ik-olivetti-mode)
     (setq olivetti-body-width 103)
@@ -826,6 +826,11 @@ Stopping at filesystem boundary (GIT_DISCOVERY_ACROSS_FILESYSTEM not set).
 
 #+begin_src emacs-lisp
   (remove-hook 'yaml-mode-hook 'olivetti-mode)
+#+end_src
+
+* CSV
+#+begin_src emacs-lisp
+  (add-hook 'csv-mode-hook (lambda () (call-interactively 'csv-align-fields)))
 #+end_src
 
 * helm-bibtex
