--- a/spacemacs.d/user-config.org
+++ b/spacemacs.d/user-config.org
@@ -351,71 +351,72 @@ Code blocks and tables should have default font.
 
 ** Agendas
 #+begin_src emacs-lisp
-  (org-super-agenda-mode 1)
-  (setq org-super-agenda-final-group-separator "\n")
-  (setq org-agenda-custom-commands
-        '(("i" "Inbox"
-           tags "LEVEL=2"
-           ((org-agenda-files
-             (list (expand-file-name "inbox.org" org-directory)))
-            (org-agenda-todo-ignore-with-date nil)
-            (org-agenda-todo-list-sublevels nil)
-            (org-agenda-dim-blocked-tasks t)
-            (org-super-agenda-groups
-             '((:auto-parent t)))))
-          ("w" "Work Daily"
-           ((agenda "" ((org-agenda-files (list (expand-file-name "work.org" org-directory)))))
-            (alltodo
-             ""
-             ((org-agenda-files (list (expand-file-name "work.org" org-directory)))
+  (with-eval-after-load 'org-super-agenda
+    (org-super-agenda-mode 1)
+    (setq org-super-agenda-final-group-separator "\n")
+    (setq org-agenda-custom-commands
+          '(("i" "Inbox"
+             tags "LEVEL=2+inbox"
+             ((org-agenda-files
+               (list (expand-file-name "inbox.org" org-directory)))
+              (org-agenda-todo-ignore-with-date nil)
+              (org-agenda-todo-list-sublevels nil)
+              (org-agenda-dim-blocked-tasks t)
               (org-super-agenda-groups
-               '(( :discard (:tag "tools"))
-                 (:name "Waiting/Blocked"
-                        :todo "WAITING"
-                        :order 2)
-                 (:name "In progress" :tag "wip")
-                 (:name "Important" :tag "important")
-                 (:name "Urgent" :tag "urgent")
-                 (:auto-outline-path t)
-                 (:auto-tags t)))))))
-          ("p" "Personal Daily"
-           ((agenda
-             ""
-             ((org-agenda-dim-blocked-tasks t)
-              (org-super-agenda-groups
-               '((:name "Habits" :habit t :order 2)
-                 (:name "Schedule" :scheduled t :deadline t :time-grid t :order 1)))))
-            (alltodo
-             ""
-             ((org-super-agenda-groups
-               '((:discard (:pred blocked-invisible-p))
-                 ( :discard (:tag "tools"))
-                 (:name "Waiting" :todo "WAITING" :order 50)
-                 (:auto-outline-path t)
-                 (:auto-tags t)))))))
-          ("t" "Improve Tools"
-           ((tags-todo
-             "tools"
-             ((org-agenda-max-todos 3)
-              (org-agenda-files
-               (list
-                (expand-file-name "work.org" org-directory)
-                (expand-file-name "gtd.org" org-directory)))))))
-          ("d" "Daily"
-           ((agenda
-             ""
-             ((org-agenda-span 2)
-              (org-agenda-start-day "-1d")
-              (org-agenda-start-with-follow-mode t)
-              (org-agenda-follow-indirect t)
-              (org-agenda-start-with-log-mode t)
-              (org-agenda-files
-               (list (expand-file-name "diary.org" org-directory)))
-              (org-super-agenda-groups
-               '((:name "Today" :date today :order 1)))))))))
-  (defun blocked-invisible-p (item)
-    "Check if item is blocked and invisible."
-    (eq (get-text-property 0 'org-todo-blocked item) 'invisible))
+               '((:auto-parent t)))))
+            ("w" "Work Daily"
+             ((agenda "" ((org-agenda-files (list (expand-file-name "work.org" org-directory)))))
+              (alltodo
+               ""
+               ((org-agenda-files (list (expand-file-name "work.org" org-directory)))
+                (org-super-agenda-groups
+                 '(( :discard (:tag "tools"))
+                   (:name "Waiting/Blocked"
+                          :todo "WAITING"
+                          :order 2)
+                   (:name "In progress" :tag "wip")
+                   (:name "Important" :tag "important")
+                   (:name "Urgent" :tag "urgent")
+                   (:auto-outline-path t)
+                   (:auto-tags t)))))))
+            ("p" "Personal Daily"
+             ((agenda
+               ""
+               ((org-agenda-dim-blocked-tasks t)
+                (org-super-agenda-groups
+                 '((:name "Habits" :habit t :order 2)
+                   (:name "Schedule" :scheduled t :deadline t :time-grid t :order 1)))))
+              (alltodo
+               ""
+               ((org-super-agenda-groups
+                 '((:discard (:pred blocked-invisible-p))
+                   ( :discard (:tag "tools"))
+                   (:name "Waiting" :todo "WAITING" :order 50)
+                   (:auto-outline-path t)
+                   (:auto-tags t)))))))
+            ("t" "Improve Tools"
+             ((tags-todo
+               "tools"
+               ((org-agenda-max-todos 3)
+                (org-agenda-files
+                 (list
+                  (expand-file-name "work.org" org-directory)
+                  (expand-file-name "gtd.org" org-directory)))))))
+            ("d" "Daily"
+             ((agenda
+               ""
+               ((org-agenda-span 2)
+                (org-agenda-start-day "-1d")
+                (org-agenda-start-with-follow-mode t)
+                (org-agenda-follow-indirect t)
+                (org-agenda-start-with-log-mode t)
+                (org-agenda-files
+                 (list (expand-file-name "diary.org" org-directory)))
+                (org-super-agenda-groups
+                 '((:name "Today" :date today :order 1)))))))))
+    (defun blocked-invisible-p (item)
+      "Check if item is blocked and invisible."
+      (eq (get-text-property 0 'org-todo-blocked item) 'invisible)))
 #+end_src
 
 *** Item appearance
